force-app/main/default/objects/Animal__c/fields/Animal_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Animal_Hierarchy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Animal Hierarchy</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Animals</relationshipLabel>
    <relationshipName>Animals</relationshipName>
    <type>Lookup</type>
</CustomField>