force-app/main/default/objects/Animal__c/fields/Diseas__c.field-meta.xml
<CustomField>
    <fullName>Diseas__c</fullName>
    <label>Diseas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>