force-app/main/default/objects/Animal__c/recordTypes/Wild.recordType-meta.xml
<RecordType>
    <fullName>Wild</fullName>
    <active>true</active>
    <label>Wild</label>
</RecordType>